# eda1-unb

./: README.md
LISTAS/Lista 1/ex1/: ex1.c
LISTAS/Lista 1/ex10/: ex10  ex10.c
LISTAS/Lista 1/ex11/: ex11  ex11.c
LISTAS/Lista 1/ex12/: ex12  ex12.c
LISTAS/Lista 1/ex13/: ex13  ex13.c
LISTAS/Lista 1/ex14/: ex14  ex14.c
LISTAS/Lista 1/ex15/: ex15  ex15.c
LISTAS/Lista 1/ex16/: ex16  ex16.c
LISTAS/Lista 1/ex17/: ex17  ex17.c
LISTAS/Lista 1/ex2/: ex2.c
LISTAS/Lista 1/ex3/: ex3.c
LISTAS/Lista 1/ex4/: ex4  ex4.c  ex4_2  ex4_2.c
LISTAS/Lista 1/ex5/: ex5  ex5.c  ex5_2  ex5_2.c
LISTAS/Lista 1/ex6/: ex6  ex6.c
LISTAS/Lista 1/ex7/: ex7  ex7.c
LISTAS/Lista 1/ex8/: ex8  ex8.c
LISTAS/Lista 1/ex9/: ex9  ex9.c
LISTAS/Lista 2/ex1/: ex1  ex1.c
LISTAS/Lista 2/ex10/: ex10.c
LISTAS/Lista 2/ex11/: ex11  ex11.c
LISTAS/Lista 2/ex12/: ex12  ex12.c
LISTAS/Lista 2/ex2/: ex2  ex2.c
LISTAS/Lista 2/ex3/: ex3  ex3.c
LISTAS/Lista 2/ex4/: ex4  ex4.c
LISTAS/Lista 2/ex5/: ex5  ex5.c
LISTAS/Lista 2/ex6/: ex6  ex6.c
LISTAS/Lista 2/ex7/: ex7  ex7.c
LISTAS/Lista 2/ex8/: ex8  ex8.c
LISTAS/Lista 2/ex9/: ex9  ex9.c  ex9_2  ex9_2.c  ex9_3  ex9_3.c
TRABALHO/lojinha-produtos-crud/: .gitignore  CMakeLists.txt
TRABALHO/lojinha-produtos-crud/include/: caixa.h  cliente.h  menuCliente.h  menuProduto.h  produto.h
TRABALHO/lojinha-produtos-crud/src/: caixa.c  cliente.c  main.c  menuCliente.c  menuProduto.c  produto.c
TRABALHO/lojinha-produtos-crud/utils/: utils.c  utils.h
